--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Git Flow</title>
 </head>
 <body>
- <header></header>< href="http://" target="_blank" rel="noopener noreferrer">
+ <header></header><a href="http://" target="_blank" rel="noopener noreferrer"></a>
 </body>
 </html>
